objects/Deal_Registration__c/fields/wi_Deal_Reg_Request__c.field-meta.xml
<CustomField>
    <fullName>wi_Deal_Reg_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>With the implementation of Zift, this WebInfinity field has been deprecated</inlineHelpText>
    <label>DEPRECATED - Deal Reg Request</label>
    <type>Checkbox</type>
</CustomField>