objects/Deal_Registration__c/fields/wi_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>wi_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registration</relationshipLabel>
    <relationshipName>DealRegistrationWiPartnerContact</relationshipName>
    <type>Lookup</type>
</CustomField>