objects/Deal_Registration__c/fields/wi_Ready_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>wi_Ready_to_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>With the implementation of Zift, this WebInfinity field has been deprecated</inlineHelpText>
    <label>DEPRECATED - Ready to Convert</label>
    <type>Checkbox</type>
</CustomField>