objects/Deal_Registration__c/fields/wi_Share_to_WI__c.field-meta.xml
<CustomField>
    <fullName>wi_Share_to_WI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>With the implementation of Zift, this WebInfinity field has been deprecated</inlineHelpText>
    <label>DEPRECATED - Share to WI</label>
    <type>Checkbox</type>
</CustomField>