objects/Deal_Registration__c/fields/wi_WebinfinityId__c.field-meta.xml
<CustomField>
    <fullName>wi_WebinfinityId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>With the implementation of Zift, this field has been deprecated</inlineHelpText>
    <label>DEPRECATED - Webinfinity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>