objects/Deal_Registration__c/fields/wi_WI_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>wi_WI_Lead_Id__c</fullName>
    <inlineHelpText>With the implementation of Zift, this field has been deprecated</inlineHelpText>
    <label>DEPRECATED - WI Lead Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>