objects/Deal_Registration__c/fields/Zift_Distributed_Lead__c.field-meta.xml
<CustomField>
    <fullName>Zift_Distributed_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Lead originated from the Supplier and should be distributed to a Partner in Zift. Created as a part of the Zift integration project. Jira ticket SS-8969</description>
    <inlineHelpText>Indicates that the Lead originated from the Supplier and should be distributed to a Partner in Zift.</inlineHelpText>
    <label>Zift Distributed Lead</label>
    <type>Checkbox</type>
</CustomField>