objects/Deal_Registration__c/fields/Zift_Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Zift_Distribution_Status__c</fullName>
    <description>Indicates the distribution status of the Deal in Zift. Created as a part of the Zift integration project. Jira ticket SS-8969</description>
    <inlineHelpText>Indicates the distribution status of the Deal in Zift.</inlineHelpText>
    <label>Zift Distribution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>