objects/Deal_Registration__c/fields/Zift_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Zift_Lead_ID__c</fullName>
    <description>Zift unique identifier for Deal. Created as a part of the Zift integration project. Jira ticket SS-8969</description>
    <externalId>true</externalId>
    <inlineHelpText>Zift unique identifier for Deal. Created as a part of the Zift integration project.</inlineHelpText>
    <label>Zift Lead ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>