objects/Deal_Registration__c/fields/Zift_Lead_Partner__c.field-meta.xml
<CustomField>
    <fullName>Zift_Lead_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Partner Account associated with the Deal. Created as a part of the Zift integration project. Jira ticket SS-8969</description>
    <inlineHelpText>Indicates the Partner Account associated with the Deal</inlineHelpText>
    <label>Zift Lead Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Registration (Zift Lead Partner)</relationshipLabel>
    <relationshipName>Deal_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>