objects/Deal_Registration__c/fields/Zift_Lead_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Zift_Lead_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the partner user to whom the Deal should be assigned to. Created as a part of the Zift integration project. Jira ticket SS-8969</description>
    <inlineHelpText>Indicates the partner user to whom the Deal should be assigned.</inlineHelpText>
    <label>Zift Lead Sales Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Registration (Zift Lead Sales Rep)</relationshipLabel>
    <relationshipName>Deal_Registration_Zift_Lead_Sales_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>