objects/Deal_Registration__c/fields/Zift_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Zift_Lead_Status__c</fullName>
    <description>Indicates the status of the Deal in Zift. Created as a part of the Zift integration project. Jira ticket SS-8969</description>
    <inlineHelpText>Indicates the status of the Deal in Zift.</inlineHelpText>
    <label>Zift Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed - Converted</fullName>
            </value>
            <value>
                <fullName>Closed - Not Converted</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Open - Not Contacted</fullName>
            </value>
            <value>
                <fullName>Working - Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>