objects/Deal_Registration__c/fields/Zift_Registered_Lead__c.field-meta.xml
<CustomField>
    <fullName>Zift_Registered_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Lead was registered in Zift. Created as a part of the Zift integration project. Jira ticket SS-8969</description>
    <inlineHelpText>Indicates that the Lead was registered in Zift.</inlineHelpText>
    <label>Zift Registered Lead</label>
    <type>Checkbox</type>
</CustomField>