objects/Deal_Registration__c/validationRules/Require_First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_First_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FirstName__c)</errorConditionFormula>
    <errorMessage>The first name field is blank. You must enter a first name when creating a new Deal Registration.</errorMessage>
</ValidationRule>