objects/Deal_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OR_Created_Date__c</columns>
    <columns>Title__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>or_Opp_Reg_Status__c</columns>
    <columns>Distributor__c</columns>
    <columns>wi_Associated_Partner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>wi_Associated_Partner__c</field>
        <operation>contains</operation>
        <value>AHEAD</value>
    </filters>
    <label>All</label>
</ListView>