objects/Deal_Registration__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>OR_Created_Date__c</columns>
    <columns>Title__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>or_Opp_Reg_Status__c</columns>
    <columns>Partner_Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OR_Created_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>