objects/Deal_Registration__c/listViews/Deal_Registration_LATAM_RVP_Deal_Registration.listView-meta.xml
<ListView>
    <fullName>Deal_Registration_LATAM_RVP_Deal_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Deal Registration - LATAM RVP</label>
    <queue>Deal_Registration_LATAM_RVP</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>