objects/Deal_Registration__c/listViews/Deal_Registration_Verizon_Approvers_Deal_Registration.listView-meta.xml
<ListView>
    <fullName>Deal_Registration_Verizon_Approvers_Deal_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Deal Registration - Verizon Approvers</label>
    <queue>Deal_Registration_Verizon_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>