objects/Deal_Registration__c/listViews/Share_to_Portal.listView-meta.xml
<ListView>
    <fullName>Share_to_Portal</fullName>
    <columns>NAME</columns>
    <columns>wi_Associated_Partner__c</columns>
    <columns>wi_Partner_Contact__c</columns>
    <columns>or_Opp_Reg_Status__c</columns>
    <columns>Zift_Registered_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zift_Registered_Lead__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>Share to Portal</label>
</ListView>